test/files/neg/bug414.check
bug414.scala:5: error: pattern type is incompatible with expected type;
 found   : object Empty
 required: IntMap[a]
                case Empty =>
                     ^
bug414.scala:7: error: type mismatch;
 found   : Unit
 required: a
                case _ =>
                       ^
two errors found
